<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/clockFragment">

    <fragment
        android:id="@+id/clockFragment"
        android:name="com.devomar.clock.clock.ClockFragment"
        android:label="@string/tab_clock" />

    <fragment
        android:id="@+id/alarmFragment"
        android:name="com.devomar.clock.alarm.AlarmFragment"
        android:label="@string/tab_alarm">
        <action
            android:id="@+id/action_alarm_to_addEditAlarm"
            app:destination="@id/addEditAlarmFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditAlarmFragment"
        android:name="com.devomar.clock.alarm.AddEditAlarmFragment"
        android:label="@string/title_add_alarm">
        <argument
            android:name="alarmId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/stopwatchFragment"
        android:name="com.devomar.clock.stopwatch.StopwatchFragment"
        android:label="@string/tab_stopwatch" />

    <fragment
        android:id="@+id/timerFragment"
        android:name="com.devomar.clock.timer.TimerFragment"
        android:label="@string/tab_timer" />

</navigation>
